// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationContext Should not crash 1`] = `
<Grommet>
  <GlobalStyleComponent />
  <ContextConsumer>
    <Component />
  </ContextConsumer>
</Grommet>
`;

exports[`NotificationContext Should render a default popup 1`] = `
<WithTheme(Modal)
  headingProps={
    Object {
      "color": "",
      "level": 3,
    }
  }
  onClose={[Function]}
  opened={true}
  title="Title"
>
  <Portal
    containerInfo={
      <div>
        <div
          aria-hidden="false"
        >
          <div
            class="StyledLayer-rmtehz-0 iOadC"
            tabindex="-1"
          >
            <div
              class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
            />
            <div
              class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <a
                aria-hidden="true"
                class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                tabindex="-1"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 eecGMu"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 lkzpGw"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 iEPYku"
                  >
                    Title
                  </h3>
                  <button
                    class="StyledButton-sc-323bzc-0 kPUXNH"
                    type="button"
                  >
                    <svg
                      aria-label="Close"
                      class="StyledIcon-ofa7kd-0 cgOtHq"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3,3 L21,21 M3,21 L21,3"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 IRSNj"
                >
                  <p
                    class="StyledParagraph-tbetod-0 dIDtVY"
                  >
                    Messsge
                  </p>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 fSSGpo"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    }
  >
    <div
      aria-hidden={false}
    >
      <StyledLayer
        onKeyDown={[Function]}
        position="center"
        responsive={true}
        tabIndex="-1"
      >
        <div
          className="StyledLayer-rmtehz-0 iOadC"
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          <StyledLayer__StyledOverlay
            onMouseDown={[Function]}
            responsive={true}
          >
            <div
              className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
              onMouseDown={[Function]}
            />
          </StyledLayer__StyledOverlay>
          <StyledLayer__StyledContainer
            full={false}
            margin="none"
            position="center"
            responsive={true}
          >
            <div
              className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <LayerContainer__HiddenAnchor
                aria-hidden="true"
                tabIndex="-1"
              >
                <a
                  aria-hidden="true"
                  className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                  tabIndex="-1"
                />
              </LayerContainer__HiddenAnchor>
              <WithTheme(Box)
                background="white"
                direction="column"
                margin="none"
                pad="medium"
                responsive={true}
                round="small"
              >
                <Box
                  background="white"
                  direction="column"
                  margin="none"
                  pad="medium"
                  responsive={true}
                  round="small"
                >
                  <StyledBox
                    background="white"
                    directionProp="column"
                    margin="none"
                    pad="medium"
                    responsive={true}
                    round="small"
                  >
                    <div
                      className="StyledBox-sc-13pk1d4-0 eecGMu"
                    >
                      <WithTheme(Box)
                        alignContent="center"
                        direction="row"
                        flex={false}
                        justify="between"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          alignContent="center"
                          direction="row"
                          flex={false}
                          justify="between"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            alignContent="center"
                            directionProp="row"
                            flex={false}
                            justify="between"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 lkzpGw"
                            >
                              <StyledHeading
                                as="h3"
                                colorProp=""
                                level={3}
                                margin={
                                  Object {
                                    "bottom": "none",
                                    "left": "none",
                                    "right": "medium",
                                    "top": "none",
                                  }
                                }
                                responsive={true}
                              >
                                <h3
                                  className="StyledHeading-sc-1rdh4aw-0 iEPYku"
                                >
                                  Title
                                </h3>
                              </StyledHeading>
                              <WithTheme(Button)
                                focusIndicator={true}
                                gap="small"
                                label={<Close />}
                                onClick={[Function]}
                                plain={true}
                                type="button"
                              >
                                <WithTheme(Button)
                                  focus={false}
                                  focusIndicator={true}
                                  gap="small"
                                  label={<Close />}
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  plain={true}
                                  type="button"
                                >
                                  <Button
                                    focus={false}
                                    focusIndicator={true}
                                    gap="small"
                                    label={<Close />}
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    plain={true}
                                    type="button"
                                  >
                                    <StyledButton
                                      focus={false}
                                      focusIndicator={true}
                                      gap="small"
                                      hasIcon={false}
                                      hasLabel={true}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                      pad={false}
                                      plain={true}
                                      type="button"
                                    >
                                      <button
                                        className="StyledButton-sc-323bzc-0 kPUXNH"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseOut={[Function]}
                                        onMouseOver={[Function]}
                                        type="button"
                                      >
                                        <StyledIcon
                                          a11yTitle="Close"
                                          viewBox="0 0 24 24"
                                        >
                                          <svg
                                            aria-label="Close"
                                            className="StyledIcon-ofa7kd-0 cgOtHq"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M3,3 L21,21 M3,21 L21,3"
                                              fill="none"
                                              stroke="#000"
                                              strokeWidth="2"
                                            />
                                          </svg>
                                        </StyledIcon>
                                      </button>
                                    </StyledButton>
                                  </Button>
                                </WithTheme(Button)>
                              </WithTheme(Button)>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="column"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="column"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="column"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 IRSNj"
                            >
                              <StyledParagraph>
                                <p
                                  className="StyledParagraph-tbetod-0 dIDtVY"
                                >
                                  Messsge
                                </p>
                              </StyledParagraph>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="row"
                        gap="medium"
                        justify="end"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="row"
                          gap="medium"
                          justify="end"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="row"
                            justify="end"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 fSSGpo"
                            />
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                    </div>
                  </StyledBox>
                </Box>
              </WithTheme(Box)>
            </div>
          </StyledLayer__StyledContainer>
        </div>
      </StyledLayer>
    </div>
  </Portal>
</WithTheme(Modal)>
`;

exports[`NotificationContext Should render a error popup 1`] = `
<WithTheme(Modal)
  headingProps={
    Object {
      "color": "status-error",
      "level": 3,
    }
  }
  onClose={[Function]}
  opened={true}
  title="Title"
>
  <Portal
    containerInfo={
      <div>
        <div
          aria-hidden="false"
        >
          <div
            class="StyledLayer-rmtehz-0 iOadC"
            tabindex="-1"
          >
            <div
              class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
            />
            <div
              class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <a
                aria-hidden="true"
                class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                tabindex="-1"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 eecGMu"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 lkzpGw"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 bwUBGa"
                  >
                    Title
                  </h3>
                  <button
                    class="StyledButton-sc-323bzc-0 kPUXNH"
                    type="button"
                  >
                    <svg
                      aria-label="Close"
                      class="StyledIcon-ofa7kd-0 cgOtHq"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3,3 L21,21 M3,21 L21,3"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 IRSNj"
                >
                  <p
                    class="StyledParagraph-tbetod-0 dIDtVY"
                  >
                    Messsge
                  </p>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 fSSGpo"
                >
                  <button
                    class="StyledButton-sc-323bzc-0 fjZdgk"
                    type="button"
                  >
                    OK
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    }
  >
    <div
      aria-hidden={false}
    >
      <StyledLayer
        onKeyDown={[Function]}
        position="center"
        responsive={true}
        tabIndex="-1"
      >
        <div
          className="StyledLayer-rmtehz-0 iOadC"
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          <StyledLayer__StyledOverlay
            onMouseDown={[Function]}
            responsive={true}
          >
            <div
              className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
              onMouseDown={[Function]}
            />
          </StyledLayer__StyledOverlay>
          <StyledLayer__StyledContainer
            full={false}
            margin="none"
            position="center"
            responsive={true}
          >
            <div
              className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <LayerContainer__HiddenAnchor
                aria-hidden="true"
                tabIndex="-1"
              >
                <a
                  aria-hidden="true"
                  className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                  tabIndex="-1"
                />
              </LayerContainer__HiddenAnchor>
              <WithTheme(Box)
                background="white"
                direction="column"
                margin="none"
                pad="medium"
                responsive={true}
                round="small"
              >
                <Box
                  background="white"
                  direction="column"
                  margin="none"
                  pad="medium"
                  responsive={true}
                  round="small"
                >
                  <StyledBox
                    background="white"
                    directionProp="column"
                    margin="none"
                    pad="medium"
                    responsive={true}
                    round="small"
                  >
                    <div
                      className="StyledBox-sc-13pk1d4-0 eecGMu"
                    >
                      <WithTheme(Box)
                        alignContent="center"
                        direction="row"
                        flex={false}
                        justify="between"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          alignContent="center"
                          direction="row"
                          flex={false}
                          justify="between"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            alignContent="center"
                            directionProp="row"
                            flex={false}
                            justify="between"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 lkzpGw"
                            >
                              <StyledHeading
                                as="h3"
                                colorProp="status-error"
                                level={3}
                                margin={
                                  Object {
                                    "bottom": "none",
                                    "left": "none",
                                    "right": "medium",
                                    "top": "none",
                                  }
                                }
                                responsive={true}
                              >
                                <h3
                                  className="StyledHeading-sc-1rdh4aw-0 bwUBGa"
                                >
                                  Title
                                </h3>
                              </StyledHeading>
                              <WithTheme(Button)
                                focusIndicator={true}
                                gap="small"
                                label={<Close />}
                                onClick={[Function]}
                                plain={true}
                                type="button"
                              >
                                <WithTheme(Button)
                                  focus={false}
                                  focusIndicator={true}
                                  gap="small"
                                  label={<Close />}
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  plain={true}
                                  type="button"
                                >
                                  <Button
                                    focus={false}
                                    focusIndicator={true}
                                    gap="small"
                                    label={<Close />}
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    plain={true}
                                    type="button"
                                  >
                                    <StyledButton
                                      focus={false}
                                      focusIndicator={true}
                                      gap="small"
                                      hasIcon={false}
                                      hasLabel={true}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                      pad={false}
                                      plain={true}
                                      type="button"
                                    >
                                      <button
                                        className="StyledButton-sc-323bzc-0 kPUXNH"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseOut={[Function]}
                                        onMouseOver={[Function]}
                                        type="button"
                                      >
                                        <StyledIcon
                                          a11yTitle="Close"
                                          viewBox="0 0 24 24"
                                        >
                                          <svg
                                            aria-label="Close"
                                            className="StyledIcon-ofa7kd-0 cgOtHq"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M3,3 L21,21 M3,21 L21,3"
                                              fill="none"
                                              stroke="#000"
                                              strokeWidth="2"
                                            />
                                          </svg>
                                        </StyledIcon>
                                      </button>
                                    </StyledButton>
                                  </Button>
                                </WithTheme(Button)>
                              </WithTheme(Button)>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="column"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="column"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="column"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 IRSNj"
                            >
                              <StyledParagraph>
                                <p
                                  className="StyledParagraph-tbetod-0 dIDtVY"
                                >
                                  Messsge
                                </p>
                              </StyledParagraph>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="row"
                        gap="medium"
                        justify="end"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="row"
                          gap="medium"
                          justify="end"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="row"
                            justify="end"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 fSSGpo"
                            >
                              <WithTheme(Button)
                                fill={false}
                                focusIndicator={true}
                                gap="small"
                                key="OK"
                                label="OK"
                                onClick={[Function]}
                                primary={true}
                                type="button"
                              >
                                <WithTheme(Button)
                                  fill={false}
                                  focus={false}
                                  focusIndicator={true}
                                  gap="small"
                                  label="OK"
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  primary={true}
                                  type="button"
                                >
                                  <Button
                                    fill={false}
                                    focus={false}
                                    focusIndicator={true}
                                    gap="small"
                                    label="OK"
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    primary={true}
                                    type="button"
                                  >
                                    <StyledButton
                                      fillContainer={false}
                                      focus={false}
                                      focusIndicator={true}
                                      gap="small"
                                      hasIcon={false}
                                      hasLabel={true}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                      pad={true}
                                      primary={true}
                                      type="button"
                                    >
                                      <button
                                        className="StyledButton-sc-323bzc-0 fjZdgk"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseOut={[Function]}
                                        onMouseOver={[Function]}
                                        type="button"
                                      >
                                        OK
                                      </button>
                                    </StyledButton>
                                  </Button>
                                </WithTheme(Button)>
                              </WithTheme(Button)>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                    </div>
                  </StyledBox>
                </Box>
              </WithTheme(Box)>
            </div>
          </StyledLayer__StyledContainer>
        </div>
      </StyledLayer>
    </div>
  </Portal>
</WithTheme(Modal)>
`;

exports[`NotificationContext Should render a success popup 1`] = `
<WithTheme(Modal)
  headingProps={
    Object {
      "color": "status-ok",
      "level": 3,
    }
  }
  onClose={[Function]}
  opened={true}
  title="Title"
>
  <Portal
    containerInfo={
      <div>
        <div
          aria-hidden="false"
        >
          <div
            class="StyledLayer-rmtehz-0 iOadC"
            tabindex="-1"
          >
            <div
              class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
            />
            <div
              class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <a
                aria-hidden="true"
                class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                tabindex="-1"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 eecGMu"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 lkzpGw"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 cvWvQz"
                  >
                    Title
                  </h3>
                  <button
                    class="StyledButton-sc-323bzc-0 kPUXNH"
                    type="button"
                  >
                    <svg
                      aria-label="Close"
                      class="StyledIcon-ofa7kd-0 cgOtHq"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3,3 L21,21 M3,21 L21,3"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 IRSNj"
                >
                  <p
                    class="StyledParagraph-tbetod-0 dIDtVY"
                  >
                    Messsge
                  </p>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 fSSGpo"
                >
                  <button
                    class="StyledButton-sc-323bzc-0 fjZdgk"
                    type="button"
                  >
                    OK
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    }
  >
    <div
      aria-hidden={false}
    >
      <StyledLayer
        onKeyDown={[Function]}
        position="center"
        responsive={true}
        tabIndex="-1"
      >
        <div
          className="StyledLayer-rmtehz-0 iOadC"
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          <StyledLayer__StyledOverlay
            onMouseDown={[Function]}
            responsive={true}
          >
            <div
              className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
              onMouseDown={[Function]}
            />
          </StyledLayer__StyledOverlay>
          <StyledLayer__StyledContainer
            full={false}
            margin="none"
            position="center"
            responsive={true}
          >
            <div
              className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <LayerContainer__HiddenAnchor
                aria-hidden="true"
                tabIndex="-1"
              >
                <a
                  aria-hidden="true"
                  className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                  tabIndex="-1"
                />
              </LayerContainer__HiddenAnchor>
              <WithTheme(Box)
                background="white"
                direction="column"
                margin="none"
                pad="medium"
                responsive={true}
                round="small"
              >
                <Box
                  background="white"
                  direction="column"
                  margin="none"
                  pad="medium"
                  responsive={true}
                  round="small"
                >
                  <StyledBox
                    background="white"
                    directionProp="column"
                    margin="none"
                    pad="medium"
                    responsive={true}
                    round="small"
                  >
                    <div
                      className="StyledBox-sc-13pk1d4-0 eecGMu"
                    >
                      <WithTheme(Box)
                        alignContent="center"
                        direction="row"
                        flex={false}
                        justify="between"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          alignContent="center"
                          direction="row"
                          flex={false}
                          justify="between"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            alignContent="center"
                            directionProp="row"
                            flex={false}
                            justify="between"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 lkzpGw"
                            >
                              <StyledHeading
                                as="h3"
                                colorProp="status-ok"
                                level={3}
                                margin={
                                  Object {
                                    "bottom": "none",
                                    "left": "none",
                                    "right": "medium",
                                    "top": "none",
                                  }
                                }
                                responsive={true}
                              >
                                <h3
                                  className="StyledHeading-sc-1rdh4aw-0 cvWvQz"
                                >
                                  Title
                                </h3>
                              </StyledHeading>
                              <WithTheme(Button)
                                focusIndicator={true}
                                gap="small"
                                label={<Close />}
                                onClick={[Function]}
                                plain={true}
                                type="button"
                              >
                                <WithTheme(Button)
                                  focus={false}
                                  focusIndicator={true}
                                  gap="small"
                                  label={<Close />}
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  plain={true}
                                  type="button"
                                >
                                  <Button
                                    focus={false}
                                    focusIndicator={true}
                                    gap="small"
                                    label={<Close />}
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    plain={true}
                                    type="button"
                                  >
                                    <StyledButton
                                      focus={false}
                                      focusIndicator={true}
                                      gap="small"
                                      hasIcon={false}
                                      hasLabel={true}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                      pad={false}
                                      plain={true}
                                      type="button"
                                    >
                                      <button
                                        className="StyledButton-sc-323bzc-0 kPUXNH"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseOut={[Function]}
                                        onMouseOver={[Function]}
                                        type="button"
                                      >
                                        <StyledIcon
                                          a11yTitle="Close"
                                          viewBox="0 0 24 24"
                                        >
                                          <svg
                                            aria-label="Close"
                                            className="StyledIcon-ofa7kd-0 cgOtHq"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M3,3 L21,21 M3,21 L21,3"
                                              fill="none"
                                              stroke="#000"
                                              strokeWidth="2"
                                            />
                                          </svg>
                                        </StyledIcon>
                                      </button>
                                    </StyledButton>
                                  </Button>
                                </WithTheme(Button)>
                              </WithTheme(Button)>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="column"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="column"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="column"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 IRSNj"
                            >
                              <StyledParagraph>
                                <p
                                  className="StyledParagraph-tbetod-0 dIDtVY"
                                >
                                  Messsge
                                </p>
                              </StyledParagraph>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="row"
                        gap="medium"
                        justify="end"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="row"
                          gap="medium"
                          justify="end"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="row"
                            justify="end"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 fSSGpo"
                            >
                              <WithTheme(Button)
                                fill={false}
                                focusIndicator={true}
                                gap="small"
                                key="OK"
                                label="OK"
                                onClick={[Function]}
                                primary={true}
                                type="button"
                              >
                                <WithTheme(Button)
                                  fill={false}
                                  focus={false}
                                  focusIndicator={true}
                                  gap="small"
                                  label="OK"
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  primary={true}
                                  type="button"
                                >
                                  <Button
                                    fill={false}
                                    focus={false}
                                    focusIndicator={true}
                                    gap="small"
                                    label="OK"
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    primary={true}
                                    type="button"
                                  >
                                    <StyledButton
                                      fillContainer={false}
                                      focus={false}
                                      focusIndicator={true}
                                      gap="small"
                                      hasIcon={false}
                                      hasLabel={true}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                      pad={true}
                                      primary={true}
                                      type="button"
                                    >
                                      <button
                                        className="StyledButton-sc-323bzc-0 fjZdgk"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseOut={[Function]}
                                        onMouseOver={[Function]}
                                        type="button"
                                      >
                                        OK
                                      </button>
                                    </StyledButton>
                                  </Button>
                                </WithTheme(Button)>
                              </WithTheme(Button)>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                    </div>
                  </StyledBox>
                </Box>
              </WithTheme(Box)>
            </div>
          </StyledLayer__StyledContainer>
        </div>
      </StyledLayer>
    </div>
  </Portal>
</WithTheme(Modal)>
`;

exports[`NotificationContext Should render a warning popup 1`] = `
<WithTheme(Modal)
  headingProps={
    Object {
      "color": "status-warning",
      "level": 3,
    }
  }
  onClose={[Function]}
  opened={true}
  title="Title"
>
  <Portal
    containerInfo={
      <div>
        <div
          aria-hidden="false"
        >
          <div
            class="StyledLayer-rmtehz-0 iOadC"
            tabindex="-1"
          >
            <div
              class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
            />
            <div
              class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <a
                aria-hidden="true"
                class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                tabindex="-1"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 eecGMu"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 lkzpGw"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 ijqQPw"
                  >
                    Title
                  </h3>
                  <button
                    class="StyledButton-sc-323bzc-0 kPUXNH"
                    type="button"
                  >
                    <svg
                      aria-label="Close"
                      class="StyledIcon-ofa7kd-0 cgOtHq"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3,3 L21,21 M3,21 L21,3"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 IRSNj"
                >
                  <p
                    class="StyledParagraph-tbetod-0 dIDtVY"
                  >
                    Messsge
                  </p>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 fSSGpo"
                >
                  <button
                    class="StyledButton-sc-323bzc-0 fjZdgk"
                    type="button"
                  >
                    OK
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    }
  >
    <div
      aria-hidden={false}
    >
      <StyledLayer
        onKeyDown={[Function]}
        position="center"
        responsive={true}
        tabIndex="-1"
      >
        <div
          className="StyledLayer-rmtehz-0 iOadC"
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          <StyledLayer__StyledOverlay
            onMouseDown={[Function]}
            responsive={true}
          >
            <div
              className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
              onMouseDown={[Function]}
            />
          </StyledLayer__StyledOverlay>
          <StyledLayer__StyledContainer
            full={false}
            margin="none"
            position="center"
            responsive={true}
          >
            <div
              className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <LayerContainer__HiddenAnchor
                aria-hidden="true"
                tabIndex="-1"
              >
                <a
                  aria-hidden="true"
                  className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                  tabIndex="-1"
                />
              </LayerContainer__HiddenAnchor>
              <WithTheme(Box)
                background="white"
                direction="column"
                margin="none"
                pad="medium"
                responsive={true}
                round="small"
              >
                <Box
                  background="white"
                  direction="column"
                  margin="none"
                  pad="medium"
                  responsive={true}
                  round="small"
                >
                  <StyledBox
                    background="white"
                    directionProp="column"
                    margin="none"
                    pad="medium"
                    responsive={true}
                    round="small"
                  >
                    <div
                      className="StyledBox-sc-13pk1d4-0 eecGMu"
                    >
                      <WithTheme(Box)
                        alignContent="center"
                        direction="row"
                        flex={false}
                        justify="between"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          alignContent="center"
                          direction="row"
                          flex={false}
                          justify="between"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            alignContent="center"
                            directionProp="row"
                            flex={false}
                            justify="between"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 lkzpGw"
                            >
                              <StyledHeading
                                as="h3"
                                colorProp="status-warning"
                                level={3}
                                margin={
                                  Object {
                                    "bottom": "none",
                                    "left": "none",
                                    "right": "medium",
                                    "top": "none",
                                  }
                                }
                                responsive={true}
                              >
                                <h3
                                  className="StyledHeading-sc-1rdh4aw-0 ijqQPw"
                                >
                                  Title
                                </h3>
                              </StyledHeading>
                              <WithTheme(Button)
                                focusIndicator={true}
                                gap="small"
                                label={<Close />}
                                onClick={[Function]}
                                plain={true}
                                type="button"
                              >
                                <WithTheme(Button)
                                  focus={false}
                                  focusIndicator={true}
                                  gap="small"
                                  label={<Close />}
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  plain={true}
                                  type="button"
                                >
                                  <Button
                                    focus={false}
                                    focusIndicator={true}
                                    gap="small"
                                    label={<Close />}
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    plain={true}
                                    type="button"
                                  >
                                    <StyledButton
                                      focus={false}
                                      focusIndicator={true}
                                      gap="small"
                                      hasIcon={false}
                                      hasLabel={true}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                      pad={false}
                                      plain={true}
                                      type="button"
                                    >
                                      <button
                                        className="StyledButton-sc-323bzc-0 kPUXNH"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseOut={[Function]}
                                        onMouseOver={[Function]}
                                        type="button"
                                      >
                                        <StyledIcon
                                          a11yTitle="Close"
                                          viewBox="0 0 24 24"
                                        >
                                          <svg
                                            aria-label="Close"
                                            className="StyledIcon-ofa7kd-0 cgOtHq"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M3,3 L21,21 M3,21 L21,3"
                                              fill="none"
                                              stroke="#000"
                                              strokeWidth="2"
                                            />
                                          </svg>
                                        </StyledIcon>
                                      </button>
                                    </StyledButton>
                                  </Button>
                                </WithTheme(Button)>
                              </WithTheme(Button)>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="column"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="column"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="column"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 IRSNj"
                            >
                              <StyledParagraph>
                                <p
                                  className="StyledParagraph-tbetod-0 dIDtVY"
                                >
                                  Messsge
                                </p>
                              </StyledParagraph>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="row"
                        gap="medium"
                        justify="end"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="row"
                          gap="medium"
                          justify="end"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="row"
                            justify="end"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 fSSGpo"
                            >
                              <WithTheme(Button)
                                fill={false}
                                focusIndicator={true}
                                gap="small"
                                key="OK"
                                label="OK"
                                onClick={[Function]}
                                primary={true}
                                type="button"
                              >
                                <WithTheme(Button)
                                  fill={false}
                                  focus={false}
                                  focusIndicator={true}
                                  gap="small"
                                  label="OK"
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  primary={true}
                                  type="button"
                                >
                                  <Button
                                    fill={false}
                                    focus={false}
                                    focusIndicator={true}
                                    gap="small"
                                    label="OK"
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    primary={true}
                                    type="button"
                                  >
                                    <StyledButton
                                      fillContainer={false}
                                      focus={false}
                                      focusIndicator={true}
                                      gap="small"
                                      hasIcon={false}
                                      hasLabel={true}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                      pad={true}
                                      primary={true}
                                      type="button"
                                    >
                                      <button
                                        className="StyledButton-sc-323bzc-0 fjZdgk"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseOut={[Function]}
                                        onMouseOver={[Function]}
                                        type="button"
                                      >
                                        OK
                                      </button>
                                    </StyledButton>
                                  </Button>
                                </WithTheme(Button)>
                              </WithTheme(Button)>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                    </div>
                  </StyledBox>
                </Box>
              </WithTheme(Box)>
            </div>
          </StyledLayer__StyledContainer>
        </div>
      </StyledLayer>
    </div>
  </Portal>
</WithTheme(Modal)>
`;

exports[`NotificationContext Should set the proper label for the confirm button 1`] = `
<WithTheme(Modal)
  headingProps={
    Object {
      "color": "",
      "level": 3,
    }
  }
  onClose={[Function]}
  opened={true}
  title="Title"
>
  <Portal
    containerInfo={
      <div>
        <div
          aria-hidden="false"
        >
          <div
            class="StyledLayer-rmtehz-0 iOadC"
            tabindex="-1"
          >
            <div
              class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
            />
            <div
              class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <a
                aria-hidden="true"
                class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                tabindex="-1"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 eecGMu"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 lkzpGw"
                >
                  <h3
                    class="StyledHeading-sc-1rdh4aw-0 iEPYku"
                  >
                    Title
                  </h3>
                  <button
                    class="StyledButton-sc-323bzc-0 kPUXNH"
                    type="button"
                  >
                    <svg
                      aria-label="Close"
                      class="StyledIcon-ofa7kd-0 cgOtHq"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3,3 L21,21 M3,21 L21,3"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 IRSNj"
                >
                  <p
                    class="StyledParagraph-tbetod-0 dIDtVY"
                  >
                    Messsge
                  </p>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 fSSGpo"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    }
  >
    <div
      aria-hidden={false}
    >
      <StyledLayer
        onKeyDown={[Function]}
        position="center"
        responsive={true}
        tabIndex="-1"
      >
        <div
          className="StyledLayer-rmtehz-0 iOadC"
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          <StyledLayer__StyledOverlay
            onMouseDown={[Function]}
            responsive={true}
          >
            <div
              className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
              onMouseDown={[Function]}
            />
          </StyledLayer__StyledOverlay>
          <StyledLayer__StyledContainer
            full={false}
            margin="none"
            position="center"
            responsive={true}
          >
            <div
              className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
            >
              <LayerContainer__HiddenAnchor
                aria-hidden="true"
                tabIndex="-1"
              >
                <a
                  aria-hidden="true"
                  className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
                  tabIndex="-1"
                />
              </LayerContainer__HiddenAnchor>
              <WithTheme(Box)
                background="white"
                direction="column"
                margin="none"
                pad="medium"
                responsive={true}
                round="small"
              >
                <Box
                  background="white"
                  direction="column"
                  margin="none"
                  pad="medium"
                  responsive={true}
                  round="small"
                >
                  <StyledBox
                    background="white"
                    directionProp="column"
                    margin="none"
                    pad="medium"
                    responsive={true}
                    round="small"
                  >
                    <div
                      className="StyledBox-sc-13pk1d4-0 eecGMu"
                    >
                      <WithTheme(Box)
                        alignContent="center"
                        direction="row"
                        flex={false}
                        justify="between"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          alignContent="center"
                          direction="row"
                          flex={false}
                          justify="between"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            alignContent="center"
                            directionProp="row"
                            flex={false}
                            justify="between"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 lkzpGw"
                            >
                              <StyledHeading
                                as="h3"
                                colorProp=""
                                level={3}
                                margin={
                                  Object {
                                    "bottom": "none",
                                    "left": "none",
                                    "right": "medium",
                                    "top": "none",
                                  }
                                }
                                responsive={true}
                              >
                                <h3
                                  className="StyledHeading-sc-1rdh4aw-0 iEPYku"
                                >
                                  Title
                                </h3>
                              </StyledHeading>
                              <WithTheme(Button)
                                focusIndicator={true}
                                gap="small"
                                label={<Close />}
                                onClick={[Function]}
                                plain={true}
                                type="button"
                              >
                                <WithTheme(Button)
                                  focus={false}
                                  focusIndicator={true}
                                  gap="small"
                                  label={<Close />}
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  plain={true}
                                  type="button"
                                >
                                  <Button
                                    focus={false}
                                    focusIndicator={true}
                                    gap="small"
                                    label={<Close />}
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    plain={true}
                                    type="button"
                                  >
                                    <StyledButton
                                      focus={false}
                                      focusIndicator={true}
                                      gap="small"
                                      hasIcon={false}
                                      hasLabel={true}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                      pad={false}
                                      plain={true}
                                      type="button"
                                    >
                                      <button
                                        className="StyledButton-sc-323bzc-0 kPUXNH"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseOut={[Function]}
                                        onMouseOver={[Function]}
                                        type="button"
                                      >
                                        <StyledIcon
                                          a11yTitle="Close"
                                          viewBox="0 0 24 24"
                                        >
                                          <svg
                                            aria-label="Close"
                                            className="StyledIcon-ofa7kd-0 cgOtHq"
                                            viewBox="0 0 24 24"
                                          >
                                            <path
                                              d="M3,3 L21,21 M3,21 L21,3"
                                              fill="none"
                                              stroke="#000"
                                              strokeWidth="2"
                                            />
                                          </svg>
                                        </StyledIcon>
                                      </button>
                                    </StyledButton>
                                  </Button>
                                </WithTheme(Button)>
                              </WithTheme(Button)>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="column"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="column"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="column"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 IRSNj"
                            >
                              <StyledParagraph>
                                <p
                                  className="StyledParagraph-tbetod-0 dIDtVY"
                                >
                                  Messsge
                                </p>
                              </StyledParagraph>
                            </div>
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                      <WithTheme(Box)
                        direction="row"
                        gap="medium"
                        justify="end"
                        margin="none"
                        pad="none"
                        responsive={true}
                      >
                        <Box
                          direction="row"
                          gap="medium"
                          justify="end"
                          margin="none"
                          pad="none"
                          responsive={true}
                        >
                          <StyledBox
                            directionProp="row"
                            justify="end"
                            margin="none"
                            pad="none"
                            responsive={true}
                          >
                            <div
                              className="StyledBox-sc-13pk1d4-0 fSSGpo"
                            />
                          </StyledBox>
                        </Box>
                      </WithTheme(Box)>
                    </div>
                  </StyledBox>
                </Box>
              </WithTheme(Box)>
            </div>
          </StyledLayer__StyledContainer>
        </div>
      </StyledLayer>
    </div>
  </Portal>
</WithTheme(Modal)>
`;
